--- a/wercker-step.yml
+++ b/wercker-step.yml
@@ -1,3 +1,3 @@
 name: heroku-deploy
-version: 2.2.1
-description: heroku-deploy step
+version: 1.0.0
+description: heroku-deploy step forked from wercker/heroku-deploy and added SKIP_STEP to allow per environment configuration
